--- a/templates/login.html
+++ b/templates/login.html
@@ -10,7 +10,7 @@
                 <form autocomplete="off" style="text-align:center; margin-top: 30px;" action="login" method="POST">
                     {% csrf_token %}
                     <!-- <i class="material-icons pro">account_circle</i> -->
-                    <input class="field form-control" id="email" name="email" type="email" placeholder="Email" required>
+                    <input class="field form-control" id="email" name="email" type="text" placeholder="Email" required>
                     <input class="field form-control" id="passowrd" name="password" type="password" placeholder="Password" required>
                     <p id="error" 
                         style="
@@ -23,8 +23,6 @@
                         {% endfor %}
                     </p>
                     <button class="btn btn-block btn-info" type="submit">NEXT</button>        
-                    <p class="my-4">Never registered before?</p>
-                    <a href="{% url 'signup' %}"><button class="btn btn-block btn-secondary" type="button">SIGNUP</button></a>
                 </form>
 
             </div>
