--- a/templates/inc/head.inc.html
+++ b/templates/inc/head.inc.html
@@ -26,12 +26,8 @@
     <!-- icon library -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   
-    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
 
-    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0/dist/Chart.bundle.js"></script>
-
-    <script src='https://api.mapbox.com/mapbox-gl-js/v1.11.1/mapbox-gl.js'></script>
-    <link href='https://api.mapbox.com/mapbox-gl-js/v1.11.1/mapbox-gl.css' rel='stylesheet' />
+    <script src="https://unpkg.com/gojs/release/go-debug.js"></script>
 
     <!-- <script src="{% static 'matrix/test/utils.js' %}"></script> -->
 
@@ -87,6 +83,8 @@
 
         }
     </style>
+
+    <link rel="stylesheet" href="{% static 'css/mine.css' %}">
 
 </head>
 
