--- a/templates/inc/navbar.inc.html
+++ b/templates/inc/navbar.inc.html
@@ -1,15 +1,47 @@
 <div class="bg-info" style="height: 70px;">
     <div class="container pt-3">
         <i class="material-icons mb-3 float-left text-info bg-white mr-3" style="border-radius: 100%; padding:5px; font-size:30px; cursor: pointer;" title="Go back" onclick="window.history.back()">keyboard_arrow_left</i>
+        
+        <h4 class="text-white mt-1 float-left">
+            {% if user.is_authenticated %}
+                Hi
+                {% if user.is_superuser %}
+                    ADMIN
+                {% else %}
+                    {{user.first_name}}
+                {% endif %}
+            {% endif %}
+        </h4>
         <div class="float-right">
+            {% if user.is_authenticated %}
+            <a href="logout">
+                <button type="button" style="border: solid 1px white; width: 100px;" class="mx-2 btn btn-info">Logout</button>
+
+            </a>
+
+            {% if user.is_superuser %}
+
+            <a href="adminPage">
+                <button type="button" style="border: solid 1px white; width: 100px;" class="mx-2 btn btn-info">Admin</button>
+
+            </a>
+
+            {% endif %}
+
+           
+
+            <img src="media/photos/{{user.email}}" id="img_btn" data-toggle="collapse" data-target="#profile_section" alt="" style="width: 50px; height:50px; border-radius: 100%; cursor:pointer" title="Click to see the details!">
+
+            {% else %}
             <a href="login">
                 <button type="button" style="border: solid 1px white; width: 100px;" class="mx-2 btn btn-info">Login</button>
 
             </a>
 
-            <a href="signup">
+            <!-- <a href="registration">
                 <button type="button" style="border: solid 1px white; width: 100px;" class="mx-2 btn btn-info">Sign Up</button>
-            </a>
+            </a> -->
+            {% endif %}
     
         </div>
 
